[package]
name = "modular-bitfield-msb-impl"
version = "0.11.2"
edition = "2018"
authors = ["Robin Freyler <robinfreyler@web.de>", "Cirrus <cirrus.neptune@protonmail.com>"]
license = "MIT/Apache-2.0"
readme = "../README.md"

repository = "https://github.com/CirrusNeptune/modular-bitfield-msb"
documentation = "https://docs.rs/modular-bitfield-msb"
description = "Bitfields for structs that allow for modular use of enums. MSB-first version."
categories = ["data-structures"]
keywords   = ["bitfield", "bit", "bitfields"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full"] }
proc-macro2 = "1"

[dev-dependencies]
modular-bitfield-msb = { path = "..", version = "0.11.2" }
